<resources>
    <string name="app_name">Gasto De Viagem</string>
    <string name="distancia">Distância</string>
    <string name="total_de_quilometros">Total de Quilômetros</string>
    <string name="preco">Preço</string>
    <string name="preco_por_litro">Preço por Litro</string>
    <string name="autonomia">Autonômia</string>
    <string name="kms_por_litro">KMs por Litro</string>
    <string name="gasto_total">Seu gasto total será de:</string>
    <string name="resultado_do_valor">0 R$</string>
    <string name="preencher_campos">Preencha todos os campos!</string>
    <string name="campos_validos">O campo Autonomia não pode ser 0</string>
</resources>